<resources>
    <string name="app_name">Hello!!</string>

    <string name="signIn_text">Sign In</string>
    <string name="signUp_text">Sign Up</string>
    <string name="your_name_hint">Your Name</string>
    <string name="mail_input_hint">Enter your Email</string>
    <string name="password_input_hint">Enter your Password</string>
    <string name="password_confirm_hint">Confirm your Password</string>
    <string name="signin_question">Don\'t have an account?</string>
    <string name="signup_question">Already have an account?</string>
    <string name="sign_in_here">Sign In here</string>
    <string name="sign_up_here">Sign Up here</string>
    <string name="sample_name">Jungle Mystic</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="signout_question">Do you want to Sign out?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="sent_message_hint">This is a sent message</string>
    <string name="received_message_hint">This is a received message</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="sender_name">Sender Name</string>
    <string name="message">Message</string>
    <string name="currentDate_hint">currentDate</string>
    <string name="currentTime_hint">currentTime</string>
    <string name="online_hint">Online</string>
    <string name="delete_for_everyone">Delete for everyone</string>
    <string name="delete_question">Do you want to delete a message…?</string>
    <string name="cancel">Cancel</string>
    <string name="typing">typing...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_friends">Search Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="sign_out">Sign Out</string>
    <string name="accept_request">Accept</string>
    <string name="requested_on">Requested on</string>
    <string name="time">time</string>
    <string name="date">date</string>
    <string name="status">Status</string>
    <string name="pending">Pending</string>
    <string name="reject">Reject</string>

</resources>