<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="105dp"
    android:paddingTop="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/name_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="8dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/cardBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/fr_profilePic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                app:layout_constraintHorizontal_bias="0.10"
                app:civ_border_width="1dp"
                android:src="@drawable/profile_icon"
                app:civ_circle_background_color="@color/light_grey"
                android:layout_gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


            <TextView
                android:id="@+id/fr_nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:padding="10dp"
                tools:text="@string/sample_name"
                android:textSize="14sp"
                android:textColor="@color/blackNwhite"
                app:layout_constraintStart_toEndOf="@id/fr_profilePic"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:text="@string/status"
                android:textStyle="bold"
                android:textColor="@color/blackNwhite"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/statusUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                tools:text="@string/pending"
                android:textColor="@color/blackNwhite"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/status"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="60dp"
                android:text="@string/requested_on"
                android:textColor="@color/blackNwhite"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/fr_nameText"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/requestDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:text="@string/date"
                android:textColor="@color/blackNwhite"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/fr_nameText"
                app:layout_constraintStart_toEndOf="@id/date_time"/>

            <TextView
                android:id="@+id/requestTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:text="@string/time"
                android:textColor="@color/blackNwhite"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/fr_nameText"
                app:layout_constraintStart_toEndOf="@id/requestDate"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>