<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignInFragment"
    android:background="@color/background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/linear_layout_back">


            <TextView
                android:id="@+id/signInTab"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/signIn_text"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold|normal"
                android:padding="10dp"
                android:gravity="center_horizontal"
                android:background="@drawable/custom_button_back"
                app:backgroundTint="@color/button_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:padding="15dp">



            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail_input_hint"
                android:background="@drawable/background_shape"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                android:textStyle="bold|normal"
                android:textColor="@color/blackNwhite"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_input_hint"
                android:background="@drawable/background_shape"
                android:padding="10dp"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:textStyle="bold|normal"
                android:textColor="@color/blackNwhite"
                android:layout_marginBottom="15dp"/>

            <Button
                android:id="@+id/signInButton"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:text="@string/signIn_text"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold|normal"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/custom_button_back"
                app:backgroundTint="@color/button_background"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>